--- a/index.html
+++ b/index.html
@@ -124,7 +124,31 @@ janne.mk.mikkonen a helsinki.fi<br><h4 class="date"><em>15.12.2017</em></h4>
 </div>
 
 
-
+<div id="introduction" class="section level1">
+<h1>Introduction</h1>
+<p>This report uses multiple correspondence analysis on a Portuguese student perfomance data set to examine the correspondence of factors related to engagement with school and engagement with relationships and free time. I hypothesize that it is possible to distinguish students who are school-oriented in several aspects from students who are relationship and free time oriented in several aspects. The aspects to be studied are:</p>
+<ul>
+<li>The amount of free time</li>
+<li>School absences</li>
+<li>Weekly study time</li>
+<li>Final grade</li>
+<li>Alcohol use</li>
+<li>Going out with friends</li>
+<li>Participation in extracurricular activities</li>
+<li>Reason for choosing the school</li>
+<li>Paid extra classes</li>
+<li>Having a romantic relationship</li>
+</ul>
+<p>I hypothesize that the same “school-oriented” students have less free time, few school absences, high weekly study time, high final grade, low alcohol use, low to medium frequency of going out with friends, high participation to extracurricular activities, courses or reputation as a reason for choosing the school, high participation to paid extra classes, and no romantic relationship. On the other hand, I expect to identify an opposite group that emphasizes free time and relationships, and has chosen the school based on its proximity to home.</p>
+</div>
+<div id="data" class="section level1">
+<h1>Data</h1>
+<p>The data set used in this study comes from two Portuguese secondary-level schools and has been originally collected for studying school performance in Mathematics and Portuguese language. Our analysis data has been previously combined from two separate data files that included the final grades of these subjects and the same background factors. Part of the variables have been used to identify the same students in the two data sets, while other variables have been averaged across the data sets in case of discrepancies.</p>
+<p>The further adjustments that were made for the purpose of the present study are shown in a script file that can be found <a href="https://github.com/jannemik/IODS-final/blob/master/data_wrangling.R">here</a>. All integer variables have been transformed into factor variables for the purpose of the multiple corresondence analysis (MCA). When tranforming the varibles, alcohol use and the number of school absences have been condensed into three classes. Finally, I have also given more informative value labels for the 10 variables that are included in the analysis.</p>
+</div>
+<div id="descriptive-analysis" class="section level1">
+<h1>Descriptive analysis</h1>
+</div>
 
 
 
